fix(Button): add active/focus state to button of high-contrast kind

--- a/packages/react-components/src/components/Button/styles/kind.scss
+++ b/packages/react-components/src/components/Button/styles/kind.scss
@@ -198,6 +198,7 @@
 
 @mixin plain() {
   border-color: transparent;
+  box-shadow: 0 0 0 1px #fff;
   background-color: transparent;
   color: var(--content-basic-primary);
 
@@ -288,7 +289,9 @@
 
   &:active,
   &:focus {
-    background-color: var(--action-high-contrast-active);
+    box-shadow:
+      0 0 1px 1px #fff,
+      var(--shadow-focus);
   }
 
   &[aria-disabled='true'] {
